A docker-compose setup with a server-proxy within the react application

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,24 @@
+upstream proxy-server {
+    server proxy-server:3030;
+}
+
 server {
 
-listen 4000;
+	listen 4000;
 
-location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
+	location / {
+    	root   /usr/share/nginx/html;
+    	index  index.html index.htm;
+    	try_files $uri $uri/ /index.html;
+  	}
 
-error_page   500 502 503 504  /50x.html;
+	error_page   500 502 503 504  /50x.html;
 
-location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+	location = /50x.html {
+    	root   /usr/share/nginx/html;
+  	}
+
+	location /api {
+        proxy_pass  http://proxy-server;
+	}
 }
