--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,14 +7,16 @@ services:
       context: .
       dockerfile: Dockerfile
     ports: 
-      - 4000:4000
+      - 80:4000
+#       ^    ^
+#  External Internal
 
   proxy-server:
     working_dir: /app
     container_name: proxy-server
     image: express-gateway:latest
     volumes:
-      - './proxy_server:/app' # Copy all contents of ./proxy-server to container
+      - './proxy_server:/app' # Copy all contents of ./proxy-server over to container
     entrypoint: ['node', 'server.js']
     ports: 
         - 3030:3030
