--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile.dev 
     volumes: 
       - '.:/app'
-      - '/app/node_modules'
+      - '/app/node_modules' # This makes it possible for the container to use it´s own node_modules
     ports: 
       - 3000:3000
     environment: 
